2007-11-16  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/floor_item.cpp, src/localplayer.cpp, src/item.cpp,
	src/inventory.h, src/gui/sell.cpp, src/gui/equipmentwindow.cpp,
	src/gui/shop.cpp, src/gui/shoplistbox.cpp, src/gui/shop.h,
	src/gui/itemshortcutcontainer.cpp, src/gui/buy.cpp,
	src/gui/itemcontainer.cpp, src/inventory.cpp, src/item.h,
	src/equipment.h, src/shopitem.cpp, src/CMakeLists.txt,
	src/floor_item.h, src/net/inventoryhandler.cpp, src/equipment.cpp,
	src/localplayer.h, src/Makefile.am, src/resources/iteminfo.h,
	src/resources/itemdb.cpp, src/resources/iteminfo.cpp, src/shopitem.h:
	Moved item icon from ItemInfo class to the Item class, so that it can
	be loaded on demand. Results in faster startup time and reduced memory
	usage.

2007-11-15  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/main.cpp: Disabled update loading.

2007-11-15  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/maps/new_4-1.tmx: Added npc.
	* data/maps/new_5-1.tmx: Added npcs.
	* data/maps/new_5-1.tmx, data/maps/new_6-1.tmx: Added monsters on map 5
	and some fixes, added npcs to map 6.

2007-11-14  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* po/it.po: Updated Italian translation.

2007-11-14  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/chat.cpp: Fixed up and down arrows in chat box.
	* src/gui/inttextbox.h, src/gui/inttextbox.cpp: Changed to textfield so
	that it is visibly editable.
	* src/gui/item_amount.cpp: Converted to layout handler.
	* src/game.cpp, src/gui/viewport.cpp, src/gui/popupmenu.cpp: Removed
	tests on current_npc.

2007-11-13  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/maps/new_1-1.tmx, data/maps/new_10-1.tmx, 
	data/maps/new_11-1.tmx, data/maps/new_12-1.tmx, data/maps/new_13-1.tmx,
	data/maps/new_14-1.tmx, data/maps/new_15-1.tmx, data/maps/new_16-1.tmx,
	data/maps/new_17-1.tmx, data/maps/new_18-1.tmx, data/maps/new_19-1.tmx,
	data/maps/new_2-1.tmx, data/maps/new_3-1.tmx, data/maps/new_4-1.tmx,