@@ -24,13 +24,11 @@
 #include <iostream>
 #include <sstream>
 
-#ifdef WIN32
-#include "utils/wingettimeofday.h"
-#else
 #include <sys/time.h>
-#endif
 
-#ifdef __APPLE__
+#ifdef WIN32
+#include <winuser.h>
+#elif __APPLE__
 #include <Carbon/Carbon.h>
 #endif
 
